Add files and html elements

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<head>
+    <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
 <html>
+    <button class="rock"></button>
+    <button class="paper"></button>
+    <button class="scissors"></button>
+    <div id="resultDisplay"></div>
+    <div id="runningScore"></div>
+    <div id="actionLog"></div>
     <script src="script.js"></script>
 </html>
