Add classes and try eventlistener

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <html>
-    <button class="rock"></button>
-    <button class="paper"></button>
-    <button class="scissors"></button>
+    <button id="ROCK" class="play"></button>
+    <button id="PAPER" class="play"></button>
+    <button id="SCISSORS" class="play"></button>
     <div id="resultDisplay"></div>
     <div id="runningScore"></div>
     <div id="actionLog"></div>
