Complete basic code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="script.js" defer></script>
 </head>
 <html>
     <button id="ROCK" class="play"></button>
@@ -9,6 +10,5 @@
     <button id="SCISSORS" class="play"></button>
     <div id="resultDisplay"></div>
     <div id="runningScore"></div>
-    <div id="actionLog"></div>
-    <script src="script.js"></script>
+    <div id="actionLog"></div>    
 </html>
