Make reset button appear

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <script src="script.js" defer></script>
 </head>
 <html>
-    <button id="ROCK" class="play"></button>
-    <button id="PAPER" class="play"></button>
-    <button id="SCISSORS" class="play"></button>
-    <div id="resultDisplay"></div>
-    <div id="runningScore"></div>
-    <div id="actionLog"></div>    
+    <button id="ROCK" class="play game"></button>
+    <button id="PAPER" class="play game"></button>
+    <button id="SCISSORS" class="play game"></button>
+    <div id="resultDisplay" class="game"></div>
+    <div id="runningScore" class="game"></div>
+    <div id="actionLog" class="game"></div>    
+    <div id="gameReset" class="hidden">
+        <button>Play again?</button>
+    </div>
 </html>
