Add reset button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="resultDisplay" class="game"></div>
     <div id="runningScore" class="game"></div>
     <div id="actionLog" class="game"></div>    
-    <div id="gameReset" class="hidden">
-        <button>Play again?</button>
+    <div id="gameReset">
+        <button id="resetButton" class="hidden">Play again?</button>
     </div>
 </html>
