Add images and colors

--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
 </head>
 <html>
     <div id="pageHeading">
-        <h1>Let's play!<br>Rock, Paper, Scissors!</h1>
+        <h1>Let's play!<br>Rock, Scissors, Paper!</h1>
     </div>
     <div id="rpsButtonContainer">
-        <button id="ROCK" class="play">Rock</button>
-        <button id="SCISSORS" class="play">Scissors</button>
-        <button id="PAPER" class="play">Paper</button>
+        <button id="ROCK" class="play">Rock<img src="./images/rock.jpg"></button>
+        <button id="SCISSORS" class="play">Scissors<img src="./images/scissors.jpg"></button>
+        <button id="PAPER" class="play">Paper<img src="./images/paper.jpg"></button>
     </div>
     <div id="resultDisplay"></div>
     <div id="runningScore"></div>
     <div id="actionLog"></div>    
-    <div id="gameReset">
+    <div>
         <button id="resetButton" class="hidden">Play again?</button>
     </div>
+    <div>
+        <button id="GUN" class="hidden">VIOLENCE<img src="./images/gun.jpg"></button>
+    </div>
     <div id="footer">
-        <p>Icons found at: <a href="https://www.freepik.com/vectors/clip-art">Clip art vector created by DrawingMyDiary - www.freepik.com</a></p>
+        <p>
+            Icons found at: <a href="https://www.freepik.com/vectors/clip-art">Clip art vector created by DrawingMyDiary - www.freepik.com</a><br>
+            <a href='https://www.freepik.com/photos/sniper'>Sniper photo created by BiZkettE1 - www.freepik.com</a>
+        </p>
     </div>
 </html>
