Fix button sizing

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <div id="pageHeading">
         <h1>Let's play!<br>Rock, Scissors, Paper!</h1>
     </div>
-    <div id="rpsButtonContainer">
-        <button id="ROCK" class="play">Rock<img src="./images/rock.jpg"></button>
-        <button id="SCISSORS" class="play">Scissors<img src="./images/scissors.jpg"></button>
-        <button id="PAPER" class="play">Paper<img src="./images/paper.jpg"></button>
+    <div id="rpsHeadingContainer">
+        <p>Rock</p>
+        <p>Scissors</p>
+        <p>Paper</p>
     </div>
-    <div id="resultDisplay"></div>
+    <div id="rpsButtonContainer">
+        <button id="ROCK" class="play"></button>
+        <button id="SCISSORS" class="play"></button>
+        <button id="PAPER" class="play"></button>
+    </div>
+    <div id="resultDisplay">You: 0 - Computer: 0</div>
     <div id="runningScore"></div>
     <div id="actionLog"></div>    
     <div>
@@ -26,8 +31,7 @@
     </div>
     <div id="footer">
         <p>
-            Icons found at: <a href="https://www.freepik.com/vectors/clip-art">Clip art vector created by DrawingMyDiary - www.freepik.com</a><br>
-            <a href='https://www.freepik.com/photos/sniper'>Sniper photo created by BiZkettE1 - www.freepik.com</a>
+            Icons found at: <a href="https://www.freepik.com/vectors/clip-art" target="_blank">Clip art vector created by DrawingMyDiary - www.freepik.com</a>
         </p>
     </div>
 </html>
