Make action log collapsible

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
         <button id="SCISSORS" class="play"></button>
         <button id="PAPER" class="play"></button>
     </div>
-    <div id="resultDisplay">You: 0 - Computer: 0</div>
-    <div id="runningScore"></div>
-    <div id="actionLog"></div>    
     <div>
         <button id="resetButton" class="hidden">Play again?</button>
+    </div>
+    <div id="resultDisplay"></div>
+    <div id="runningScore">You: 0 - Computer: 0</div>  
+    <button type="button" class="collapsible">
+        <h3>Action Log</h3>
+    </button>
+    <div id="actionLogContainer">
+        <p id="actionLog"></p>
     </div>
     <div>
         <button id="GUN" class="hidden">VIOLENCE<img src="./images/gun.jpg"></button>
