Make violence an option

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <button id="PAPER" class="play"></button>
     </div>
     <div>
-        <button id="resetButton" class="hidden">Play again?</button>
+        <button id="GUN" class="hidden">VIOLENCE<img src="./images/gun.jpg"></button>
+    </div>
+    <div>
+        <button id="resetButton" class="hidden play">Play again?</button>
     </div>
     <div id="resultDisplay"></div>
     <div id="runningScore">You: 0 - Computer: 0</div>  
@@ -31,9 +34,7 @@
     <div id="actionLogContainer">
         <p id="actionLog"></p>
     </div>
-    <div>
-        <button id="GUN" class="hidden">VIOLENCE<img src="./images/gun.jpg"></button>
-    </div>
+    <div id="emptySpace"></div>
     <div id="footer">
         <p>
             Icons found at: <a href="https://www.freepik.com/vectors/clip-art" target="_blank">Clip art vector created by DrawingMyDiary - www.freepik.com</a>
