--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <button id="PAPER" class="play"></button>
     </div>
     <div>
-        <button id="GUN" class="hidden">VIOLENCE<img src="./images/gun.jpg"></button>
-    </div>
-    <div>
         <button id="resetButton" class="hidden play">Play again?</button>
+    </div>
+    <div id="violenceContainer" class="hidden">
+        <p>VIOLENCE</p>
+        <button id="GUN" class="play"></button>
     </div>
     <div id="resultDisplay"></div>
     <div id="runningScore">You: 0 - Computer: 0</div>  
@@ -34,7 +35,9 @@
     <div id="actionLogContainer">
         <p id="actionLog"></p>
     </div>
-    <div id="emptySpace"></div>
+    <div id="emptySpace">
+        <p>Try typing "violence" for a surprise</p>
+    </div>
     <div id="footer">
         <p>
             Icons found at: <a href="https://www.freepik.com/vectors/clip-art" target="_blank">Clip art vector created by DrawingMyDiary - www.freepik.com</a>
